client/src/global.css
html {
  background-color: var(--background);
  color: var(--text);
  font-family: ui-sans-serif, system-ui, Segoe UI, Helvetica, Apple Color Emoji, Arial, sans-serif, Segoe UI Emoji, Segoe UI Symbol;
  scroll-behavior: smooth;
  scrollbar-gutter: stable;
  overflow-x: hidden;
  height: 100vh;
}

body {
  overflow: visible !important;
  transition: all 0.25s;
}

* {
  box-sizing: border-box;
}

*:focus {
  outline: none;
}

a {
  color: var(--link);
  transition: color 0.2s;
}

a:hover {
  color: var(--link-hover);
}

.content {
  font-size: 16px;
  padding-left: 275px;
  margin: 150px auto 0 auto;
  width: 1075px;
  text-align: left;
  padding-bottom: 175px;
}

.undraggable {
  user-drag: none;
  -webkit-user-drag: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

.wrapper {
  text-align: center;
}

::-webkit-scrollbar {
  height: 5px;
  width: 5px;
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;
}

